--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-* {
-    margin: 0;
-    padding: 0;
-    font-family: 'Arial', sans-serif;
-    line-height: 1.5;
-    /* transition: all 0.3s ease; */
-}
-
 @font-face {
     font-family: myBgFont;
     src: url(Li\ SK\ Bishal\ Unicode.ttf);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: myBgFont;
+    font-weight: lighter;
+    line-height: 1.5;
 }
 
 body {
@@ -24,26 +24,37 @@ body {
 }
 
 .heading {
-    margin-top: 20px;
-    font-family: myBgFont;
-    color: #15803D;
-    font-weight: lighter;
-    font-size: 18px;
     text-align: center;
 }
 
-.heading>span {
-    font-family: myBgFont;
+.header {
+    margin-top: 20px;
+    color: #15803D;
+    font-size: 22px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.header>span {
+    margin-top: 20px;
+    color: rgb(186, 40, 40);
+    font-size: 22px;
+}
+
+.order-button {
     color: brown;
-    font-weight: lighter;
     font-size: 20px;
     text-align: center;
+    background-color: #F3F6F5;
+    border-radius: 5px;
+    padding: 3px 15px;
+    border: none;
 }
 
 .product-img {
     width: 80%;
     border-radius: 10px;
-    border: 1px red solid;
+    border: 2px red solid;
 }
 
 .description-title {
@@ -53,8 +64,6 @@ body {
 }
 
 .description-title>h2 {
-    font-family: myBgFont;
-    font-weight: lighter;
     font-size: 20px;
     text-align: center;
     color: aliceblue;
@@ -74,8 +83,6 @@ body {
 }
 
 .description p {
-    font-family: myBgFont;
-    font-weight: lighter;
     background-color: #F3F6F5;
     width: 70%;
     border-radius: 10px;
@@ -84,12 +91,10 @@ body {
 }
 
 .checkout-title {
-    margin: 10px 0px;
+    margin: 10px 15px;
 }
 
 .checkout-title>h2 {
-    font-family: myBgFont;
-    font-weight: lighter;
     font-size: 18px;
     text-align: center;
     color: rgb(34, 95, 148);
@@ -109,13 +114,10 @@ body {
     flex-direction: column;
     gap: 25px;
     padding: 15px 0;
-
 }
 
 .checkout-form>p {
     margin: 0px 15px;
-    font-family: myBgFont;
-    font-weight: lighter;
     font-size: 16px;
     color: #15803D;
 }
@@ -126,8 +128,6 @@ body {
     margin-bottom: 5px;
     border-radius: 5px;
     border: none;
-    font-family: myBgFont;
-    font-weight: lighter;
     font-size: 18px;
     background: #DC3545;
     color: white;
@@ -149,8 +149,6 @@ body {
 
 .input::placeholder {
     border: none;
-    font-family: myBgFont;
-    font-weight: lighter;
     font-size: 14px;
 }
 
@@ -163,8 +161,6 @@ body {
 }
 
 .delivery-charge-title {
-    font-family: myBgFont;
-    font-weight: lighter;
     font-size: 16px;
     color: #15803D;
 }
@@ -176,16 +172,74 @@ body {
     text-align: center;
 }
 
-input[name="deliveryMethod"] {
+input[name="deliveryOption"] {
     accent-color: #15803D;
     margin-right: 5px;
+    cursor: pointer;
 }
 
 .input-delivery-charge label {
-    font-size: 16px;
     cursor: pointer;
-    font-family: myBgFont;
-    font-weight: lighter;
     font-size: 14px;
     color: #757575;
+}
+
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 70%;
+    transform: translate(-50%, -50%);
+    background-color: #FFF;
+    padding: 20px;
+    border-radius: 10px;
+    z-index: 1000;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
+
+.popup-video {
+    width: 22%;
+    margin-bottom: 2px;
+}
+
+.popup h2 {
+    margin-bottom: 8px;
+    font-size: 16px;
+    color: #757575;
+    text-align: center;
+}
+
+.popup span {
+    font-size: 20px;
+    color: #15803D;
+    text-align: center;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    display: none;
+}
+
+.close-btn {
+    background-color: #ff5e5e;
+    border: none;
+    padding: 4px 25px;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 40%;
+}
+
+.close-btn:hover {
+    background-color: #e04e4e;
 }
