contact button added

--- a/style.css
+++ b/style.css
@@ -123,17 +123,69 @@ body {
     color: #15803D;
 }
 
+
 .btn-submit {
     margin: 0px 15px;
-    margin-bottom: 5px;
     border-radius: 5px;
     border: none;
-    font-size: 18px;
-    background: #DC3545;
+    font-size: 15px;
+    background: brown;
     color: white;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-    padding: 8px;
+    padding: 5px;
+}
+
+.btn-contact-set{
+    display: flex;
+    margin: 0px 15px;    
+    margin-bottom: 15px;
+    
+}
+
+.callnow {
+    margin: 0px 15px;
+    border-radius: 5px;
+    border: none;
+    font-size: 15px;
+    background:#FFA500;
+    color: white;
+    cursor: pointer;
+    padding: 5px 10px;
+    display: flex;
+    justify-content: center;
+    gap: 6px;
+    flex: 1;
+}
+
+.callnow >svg{
+    width: 16px;  
+}
+
+.callnow path {
+    fill: white;
+}
+
+.whatsapp {
+    margin: 0px 15px;
+    border-radius: 5px;
+    border: none;
+    font-size: 15px;
+    background: #4BCB5A;
+    color: white;
+    cursor: pointer;
+    padding: 5px 10px;
+    display: flex;
+    justify-content: center;
+    gap: 6px;
+    flex: 1;
+}
+
+.whatsapp >svg{
+    width: 18px;  
+}
+
+.whatsapp path {
+    fill: white;
 }
 
 .input {
